# Ruja

./: .gitignore  License.txt  Makefile  README.md  dot.sh  input.ruja  ruja.c
exe/: ruja
includes/: ast.h  bytecode.h  common.h  compiler.h  ir.h  lexer.h  memory.h  objects.h  parser.h  stack.h  string.h  symbol_table.h  types.h  vm.h  word.h
src/: CMakeLists.txt  ast.c  bytecode.c  common.h  compiler.c  ir.c  lexer.c  lexer.h  memory.c  object.c  parser.c  stack.c  string.c  symbol_table.c  vm.c  word.c
